src/lsimplify_parse.output
   0  $accept : %entry% $end

   1  main : program
   2       | EOF

   3  cur_position :

   4  body : cur_position LET equation_list TEL body_end

   5  body_end : cur_position
   6           | cur_position SEMICOLON

   7  clocked_var_decl : var_decl
   8                   | cur_position LEFTPAREN var_decl_list RIGHTPAREN WHEN IDENTIFIER

   9  const_decl : cur_position CONST constdecl_const_decl_one_const_decl7

  10  equation : cur_position ASSERT exp
  11           | left_part EQUALS exp
  12           | cur_position KINDCOMM IDENTIFIER COLON equation2_equation_exp11

  13  equation_list : equationlist_equation_list_equation13

  14  exp : cur_position INTEGER
  15      | cur_position REAL
  16      | cur_position IDENTIFIER
  17      | cur_position IDENTIFIER LEFTPAREN exp_list RIGHTPAREN
  18      | cur_position LEFTPAREN exp_list RIGHTPAREN
  19      | cur_position LEFTSQUARE exp_list RIGHTSQUARE
  20      | cur_position NOT exp
  21      | cur_position MINUS exp
  22      | cur_position PRE exp
  23      | cur_position CURRENT exp
  24      | exp ARROW exp
  25      | exp WHEN exp
  26      | exp OR exp
  27      | exp XOR exp
  28      | exp AND exp
  29      | exp IMPLIES exp
  30      | exp EQUALS exp
  31      | exp DIAMOND exp
  32      | exp LESSTHAN exp
  33      | exp GREATERTHAN exp
  34      | exp LTEQUALS exp
  35      | exp GTEQUALS exp
  36      | exp PLUS exp
  37      | exp MINUS exp
  38      | exp STAR exp
  39      | exp SLASH exp
  40      | exp DIV exp
  41      | exp MOD exp
  42      | exp UPCARAT exp
  43      | exp PIPE exp
  44      | exp LEFTSQUARE exp sel_sub RIGHTSQUARE
  45      | cur_position IF exp THEN exp ELSE exp
  46      | cur_position WITH exp THEN exp ELSE exp
  47      | cur_position POUND LEFTPAREN exp_list RIGHTPAREN

  48  exp_list : exp explist_exp_list_comma49

  49  func_decl : cur_position FUNCTION IDENTIFIER LEFTPAREN var_decl_list RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN

  50  id_list : cur_position IDENTIFIER varlist_id_list_comma52

  51  new_id_list : cur_position IDENTIFIER varlist_id_list_comma53

  52  in_param : clocked_var_decl
  53           | cur_position CONST var_decl

  54  in_param_list : in_param inparamlist_in_param_list_semicolon56

  55  include_list : includelist_include_list_linclude58

  56  left_elem : cur_position IDENTIFIER
  57            | struct_filter
  58            | tab_access

  59  left_elem_list : left_elem leftelemlist_left_elem_list_comma63

  60  left_part : left_elem_list
  61            | cur_position LEFTPAREN left_elem_list RIGHTPAREN

  62  linclude : cur_position INCLUDE STRINGLIT

  63  local_decl : cur_position VAR localdecl_local_decl_clocked_var_decl68

  64  ltype : cur_position IDENTIFIER
  65        | ltype UPCARAT exp
  66        | cur_position LEFTSQUARE type_list RIGHTSQUARE

  67  ltype_list : cur_position IDENTIFIER ltypelist_ltype_list_comma73

  68  lus_file : lusfile_lus_file_one_decl75

  69  node_decl : cur_position NODE IDENTIFIER LEFTPAREN in_param_list RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body

  70  one_const_decl : cur_position IDENTIFIER EQUALS exp
  71                 | id_list COLON IDENTIFIER

  72  one_decl : const_decl
  73           | type_decl
  74           | func_decl
  75           | node_decl

  76  one_type_decl : cur_position IDENTIFIER EQUALS ltype
  77                | ltype_list

  78  program : include_list lus_file

  79  sel_sub : selsub_sel_sub_dotdot88

  80  sel_subsub : selsubsub_sel_subsub_step90

  81  selector : cur_position LEFTSQUARE exp sel_sub RIGHTSQUARE

  82  struct_filter : cur_position LEFTSQUARE left_elem_list RIGHTSQUARE

  83  tab_access : cur_position IDENTIFIER selector
  84             | tab_access selector

  85  type_decl : cur_position TYPE typedecl_type_decl_one_type_decl96

  86  type_list : ltype typelist_type_list_comma98

  87  var_decl : new_id_list COLON ltype

  88  var_decl_list : var_decl vardecllist_var_decl_list_semicolon101

  89  vardecllist_var_decl_list_semicolon101 : cur_position
  90                                         | cur_position SEMICOLON var_decl vardecllist_var_decl_list_semicolon101

  91  typelist_type_list_comma98 : cur_position
  92                             | cur_position COMMA ltype typelist_type_list_comma98

  93  typedecl_type_decl_one_type_decl96 : one_type_decl SEMICOLON
  94                                     | one_type_decl SEMICOLON typedecl_type_decl_one_type_decl96

  95  selsubsub_sel_subsub_step90 : cur_position STEP exp
  96                              | cur_position

  97  selsub_sel_sub_dotdot88 : cur_position DOTDOT exp sel_subsub
  98                          | cur_position

  99  nodedecl_node_decl_local_decl77 : local_decl
 100                                  | cur_position

 101  lusfile_lus_file_one_decl75 : cur_position
 102                              | one_decl lusfile_lus_file_one_decl75

 103  ltypelist_ltype_list_comma73 : cur_position
 104                               | cur_position COMMA IDENTIFIER ltypelist_ltype_list_comma73

 105  localdecl_local_decl_clocked_var_decl68 : clocked_var_decl SEMICOLON
 106                                          | clocked_var_decl SEMICOLON localdecl_local_decl_clocked_var_decl68

 107  leftelemlist_left_elem_list_comma63 : cur_position
 108                                      | cur_position COMMA left_elem leftelemlist_left_elem_list_comma63

 109  includelist_include_list_linclude58 : cur_position
 110                                      | linclude includelist_include_list_linclude58

 111  inparamlist_in_param_list_semicolon56 : cur_position
 112                                        | cur_position SEMICOLON in_param inparamlist_in_param_list_semicolon56

 113  varlist_id_list_comma52 : cur_position
 114                          | cur_position COMMA IDENTIFIER varlist_id_list_comma52

 115  varlist_id_list_comma53 : cur_position
 116                          | cur_position COMMA IDENTIFIER varlist_id_list_comma53

 117  explist_exp_list_comma49 : cur_position
 118                           | cur_position COMMA exp explist_exp_list_comma49

 119  equationlist_equation_list_equation13 : equation SEMICOLON
 120                                        | equation SEMICOLON equationlist_equation_list_equation13

 121  equation2_equation_exp11 : exp
 122                           | cur_position

 123  constdecl_const_decl_one_const_decl7 : one_const_decl SEMICOLON
 124                                       | one_const_decl SEMICOLON constdecl_const_decl_one_const_decl7

 125  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (125)
	cur_position : .  (3)

	EOF  shift 3
	$end  reduce 3
	CONST  reduce 3
	FUNCTION  reduce 3
	INCLUDE  reduce 3
	NODE  reduce 3
	TYPE  reduce 3

	main  goto 4
	include_list  goto 5
	includelist_include_list_linclude58  goto 6
	linclude  goto 7
	program  goto 8
	cur_position  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : EOF .  (2)

	.  reduce 2


state 4
	%entry% : '\001' main .  (125)

	.  reduce 125


state 5
	program : include_list . lus_file  (78)
	cur_position : .  (3)

	.  reduce 3

	const_decl  goto 10
	func_decl  goto 11
	lus_file  goto 12
	lusfile_lus_file_one_decl75  goto 13
	node_decl  goto 14
	one_decl  goto 15
	type_decl  goto 16
	cur_position  goto 17


state 6
	include_list : includelist_include_list_linclude58 .  (55)

	.  reduce 55


state 7
	includelist_include_list_linclude58 : linclude . includelist_include_list_linclude58  (110)
	cur_position : .  (3)

	.  reduce 3

	includelist_include_list_linclude58  goto 18
	linclude  goto 7
	cur_position  goto 9


state 8
	main : program .  (1)

	.  reduce 1


state 9
	linclude : cur_position . INCLUDE STRINGLIT  (62)
	includelist_include_list_linclude58 : cur_position .  (109)

	INCLUDE  shift 19
	$end  reduce 109
	CONST  reduce 109
	FUNCTION  reduce 109
	NODE  reduce 109
	TYPE  reduce 109


state 10
	one_decl : const_decl .  (72)

	.  reduce 72


state 11
	one_decl : func_decl .  (74)

	.  reduce 74


state 12
	program : include_list lus_file .  (78)

	.  reduce 78


state 13
	lus_file : lusfile_lus_file_one_decl75 .  (68)

	.  reduce 68


state 14
	one_decl : node_decl .  (75)

	.  reduce 75


state 15
	lusfile_lus_file_one_decl75 : one_decl . lusfile_lus_file_one_decl75  (102)
	cur_position : .  (3)

	.  reduce 3

	const_decl  goto 10
	func_decl  goto 11
	lusfile_lus_file_one_decl75  goto 20
	node_decl  goto 14
	one_decl  goto 15
	type_decl  goto 16
	cur_position  goto 17


state 16
	one_decl : type_decl .  (73)

	.  reduce 73


state 17
	const_decl : cur_position . CONST constdecl_const_decl_one_const_decl7  (9)
	func_decl : cur_position . FUNCTION IDENTIFIER LEFTPAREN var_decl_list RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)
	node_decl : cur_position . NODE IDENTIFIER LEFTPAREN in_param_list RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)
	type_decl : cur_position . TYPE typedecl_type_decl_one_type_decl96  (85)
	lusfile_lus_file_one_decl75 : cur_position .  (101)

	CONST  shift 21
	FUNCTION  shift 22
	NODE  shift 23
	TYPE  shift 24
	$end  reduce 101


state 18
	includelist_include_list_linclude58 : linclude includelist_include_list_linclude58 .  (110)

	.  reduce 110


state 19
	linclude : cur_position INCLUDE . STRINGLIT  (62)

	STRINGLIT  shift 25
	.  error


state 20
	lusfile_lus_file_one_decl75 : one_decl lusfile_lus_file_one_decl75 .  (102)

	.  reduce 102


state 21
	const_decl : cur_position CONST . constdecl_const_decl_one_const_decl7  (9)
	cur_position : .  (3)

	.  reduce 3

	constdecl_const_decl_one_const_decl7  goto 26
	id_list  goto 27
	one_const_decl  goto 28
	cur_position  goto 29


state 22
	func_decl : cur_position FUNCTION . IDENTIFIER LEFTPAREN var_decl_list RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)

	IDENTIFIER  shift 30
	.  error


state 23
	node_decl : cur_position NODE . IDENTIFIER LEFTPAREN in_param_list RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)

	IDENTIFIER  shift 31
	.  error


state 24
	type_decl : cur_position TYPE . typedecl_type_decl_one_type_decl96  (85)
	cur_position : .  (3)

	.  reduce 3

	ltype_list  goto 32
	one_type_decl  goto 33
	typedecl_type_decl_one_type_decl96  goto 34
	cur_position  goto 35


state 25
	linclude : cur_position INCLUDE STRINGLIT .  (62)

	.  reduce 62


state 26
	const_decl : cur_position CONST constdecl_const_decl_one_const_decl7 .  (9)

	.  reduce 9


state 27
	one_const_decl : id_list . COLON IDENTIFIER  (71)

	COLON  shift 36
	.  error


state 28
	constdecl_const_decl_one_const_decl7 : one_const_decl . SEMICOLON  (123)
	constdecl_const_decl_one_const_decl7 : one_const_decl . SEMICOLON constdecl_const_decl_one_const_decl7  (124)

	SEMICOLON  shift 37
	.  error


state 29
	id_list : cur_position . IDENTIFIER varlist_id_list_comma52  (50)
	one_const_decl : cur_position . IDENTIFIER EQUALS exp  (70)

	IDENTIFIER  shift 38
	.  error


state 30
	func_decl : cur_position FUNCTION IDENTIFIER . LEFTPAREN var_decl_list RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)

	LEFTPAREN  shift 39
	.  error


state 31
	node_decl : cur_position NODE IDENTIFIER . LEFTPAREN in_param_list RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)

	LEFTPAREN  shift 40
	.  error


state 32
	one_type_decl : ltype_list .  (77)

	.  reduce 77


state 33
	typedecl_type_decl_one_type_decl96 : one_type_decl . SEMICOLON  (93)
	typedecl_type_decl_one_type_decl96 : one_type_decl . SEMICOLON typedecl_type_decl_one_type_decl96  (94)

	SEMICOLON  shift 41
	.  error


state 34
	type_decl : cur_position TYPE typedecl_type_decl_one_type_decl96 .  (85)

	.  reduce 85


state 35
	ltype_list : cur_position . IDENTIFIER ltypelist_ltype_list_comma73  (67)
	one_type_decl : cur_position . IDENTIFIER EQUALS ltype  (76)

	IDENTIFIER  shift 42
	.  error


state 36
	one_const_decl : id_list COLON . IDENTIFIER  (71)

	IDENTIFIER  shift 43
	.  error


state 37
	constdecl_const_decl_one_const_decl7 : one_const_decl SEMICOLON .  (123)
	constdecl_const_decl_one_const_decl7 : one_const_decl SEMICOLON . constdecl_const_decl_one_const_decl7  (124)
	cur_position : .  (3)

	$end  reduce 123
	CONST  reduce 123
	FUNCTION  reduce 123
	NODE  reduce 123
	TYPE  reduce 123
	IDENTIFIER  reduce 3

	constdecl_const_decl_one_const_decl7  goto 44
	id_list  goto 27
	one_const_decl  goto 28
	cur_position  goto 29


state 38
	id_list : cur_position IDENTIFIER . varlist_id_list_comma52  (50)
	one_const_decl : cur_position IDENTIFIER . EQUALS exp  (70)
	cur_position : .  (3)

	EQUALS  shift 45
	COLON  reduce 3
	COMMA  reduce 3

	varlist_id_list_comma52  goto 46
	cur_position  goto 47


state 39
	func_decl : cur_position FUNCTION IDENTIFIER LEFTPAREN . var_decl_list RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)
	cur_position : .  (3)

	.  reduce 3

	var_decl  goto 48
	var_decl_list  goto 49
	cur_position  goto 50
	new_id_list  goto 51


state 40
	node_decl : cur_position NODE IDENTIFIER LEFTPAREN . in_param_list RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)
	cur_position : .  (3)

	.  reduce 3

	clocked_var_decl  goto 52
	in_param  goto 53
	in_param_list  goto 54
	var_decl  goto 55
	cur_position  goto 56
	new_id_list  goto 51


state 41
	typedecl_type_decl_one_type_decl96 : one_type_decl SEMICOLON .  (93)
	typedecl_type_decl_one_type_decl96 : one_type_decl SEMICOLON . typedecl_type_decl_one_type_decl96  (94)
	cur_position : .  (3)

	$end  reduce 93
	CONST  reduce 93
	FUNCTION  reduce 93
	NODE  reduce 93
	TYPE  reduce 93
	IDENTIFIER  reduce 3

	ltype_list  goto 32
	one_type_decl  goto 33
	typedecl_type_decl_one_type_decl96  goto 57
	cur_position  goto 35


state 42
	ltype_list : cur_position IDENTIFIER . ltypelist_ltype_list_comma73  (67)
	one_type_decl : cur_position IDENTIFIER . EQUALS ltype  (76)
	cur_position : .  (3)

	EQUALS  shift 58
	COMMA  reduce 3
	SEMICOLON  reduce 3

	ltypelist_ltype_list_comma73  goto 59
	cur_position  goto 60


state 43
	one_const_decl : id_list COLON IDENTIFIER .  (71)

	.  reduce 71


state 44
	constdecl_const_decl_one_const_decl7 : one_const_decl SEMICOLON constdecl_const_decl_one_const_decl7 .  (124)

	.  reduce 124


state 45
	one_const_decl : cur_position IDENTIFIER EQUALS . exp  (70)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 61
	cur_position  goto 62


state 46
	id_list : cur_position IDENTIFIER varlist_id_list_comma52 .  (50)

	.  reduce 50


state 47
	varlist_id_list_comma52 : cur_position .  (113)
	varlist_id_list_comma52 : cur_position . COMMA IDENTIFIER varlist_id_list_comma52  (114)

	COMMA  shift 63
	COLON  reduce 113


state 48
	var_decl_list : var_decl . vardecllist_var_decl_list_semicolon101  (88)
	cur_position : .  (3)

	.  reduce 3

	vardecllist_var_decl_list_semicolon101  goto 64
	cur_position  goto 65


state 49
	func_decl : cur_position FUNCTION IDENTIFIER LEFTPAREN var_decl_list . RIGHTPAREN RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)

	RIGHTPAREN  shift 66
	.  error


state 50
	new_id_list : cur_position . IDENTIFIER varlist_id_list_comma53  (51)

	IDENTIFIER  shift 67
	.  error


state 51
	var_decl : new_id_list . COLON ltype  (87)

	COLON  shift 68
	.  error


state 52
	in_param : clocked_var_decl .  (52)

	.  reduce 52


state 53
	in_param_list : in_param . inparamlist_in_param_list_semicolon56  (54)
	cur_position : .  (3)

	.  reduce 3

	inparamlist_in_param_list_semicolon56  goto 69
	cur_position  goto 70


state 54
	node_decl : cur_position NODE IDENTIFIER LEFTPAREN in_param_list . RIGHTPAREN RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)

	RIGHTPAREN  shift 71
	.  error


state 55
	clocked_var_decl : var_decl .  (7)

	.  reduce 7


state 56
	clocked_var_decl : cur_position . LEFTPAREN var_decl_list RIGHTPAREN WHEN IDENTIFIER  (8)
	new_id_list : cur_position . IDENTIFIER varlist_id_list_comma53  (51)
	in_param : cur_position . CONST var_decl  (53)

	CONST  shift 72
	LEFTPAREN  shift 73
	IDENTIFIER  shift 67
	.  error


state 57
	typedecl_type_decl_one_type_decl96 : one_type_decl SEMICOLON typedecl_type_decl_one_type_decl96 .  (94)

	.  reduce 94


state 58
	one_type_decl : cur_position IDENTIFIER EQUALS . ltype  (76)
	cur_position : .  (3)

	.  reduce 3

	ltype  goto 74
	cur_position  goto 75


state 59
	ltype_list : cur_position IDENTIFIER ltypelist_ltype_list_comma73 .  (67)

	.  reduce 67


state 60
	ltypelist_ltype_list_comma73 : cur_position .  (103)
	ltypelist_ltype_list_comma73 : cur_position . COMMA IDENTIFIER ltypelist_ltype_list_comma73  (104)

	COMMA  shift 76
	SEMICOLON  reduce 103


state 61
	exp : exp . ARROW exp  (24)
	exp : exp . WHEN exp  (25)
	exp : exp . OR exp  (26)
	exp : exp . XOR exp  (27)
	exp : exp . AND exp  (28)
	exp : exp . IMPLIES exp  (29)
	exp : exp . EQUALS exp  (30)
	exp : exp . DIAMOND exp  (31)
	exp : exp . LESSTHAN exp  (32)
	exp : exp . GREATERTHAN exp  (33)
	exp : exp . LTEQUALS exp  (34)
	exp : exp . GTEQUALS exp  (35)
	exp : exp . PLUS exp  (36)
	exp : exp . MINUS exp  (37)
	exp : exp . STAR exp  (38)
	exp : exp . SLASH exp  (39)
	exp : exp . DIV exp  (40)
	exp : exp . MOD exp  (41)
	exp : exp . UPCARAT exp  (42)
	exp : exp . PIPE exp  (43)
	exp : exp . LEFTSQUARE exp sel_sub RIGHTSQUARE  (44)
	one_const_decl : cur_position IDENTIFIER EQUALS exp .  (70)

	AND  shift 77
	ARROW  shift 78
	DIAMOND  shift 79
	DIV  shift 80
	EQUALS  shift 81
	GREATERTHAN  shift 82
	GTEQUALS  shift 83
	IMPLIES  shift 84
	LEFTSQUARE  shift 85
	LESSTHAN  shift 86
	LTEQUALS  shift 87
	MINUS  shift 88
	MOD  shift 89
	OR  shift 90
	PIPE  shift 91
	PLUS  shift 92
	SLASH  shift 93
	STAR  shift 94
	UPCARAT  shift 95
	WHEN  shift 96
	XOR  shift 97
	SEMICOLON  reduce 70


state 62
	exp : cur_position . INTEGER  (14)
	exp : cur_position . REAL  (15)
	exp : cur_position . IDENTIFIER  (16)
	exp : cur_position . IDENTIFIER LEFTPAREN exp_list RIGHTPAREN  (17)
	exp : cur_position . LEFTPAREN exp_list RIGHTPAREN  (18)
	exp : cur_position . LEFTSQUARE exp_list RIGHTSQUARE  (19)
	exp : cur_position . NOT exp  (20)
	exp : cur_position . MINUS exp  (21)
	exp : cur_position . PRE exp  (22)
	exp : cur_position . CURRENT exp  (23)
	exp : cur_position . IF exp THEN exp ELSE exp  (45)
	exp : cur_position . WITH exp THEN exp ELSE exp  (46)
	exp : cur_position . POUND LEFTPAREN exp_list RIGHTPAREN  (47)

	CURRENT  shift 98
	IF  shift 99
	LEFTPAREN  shift 100
	LEFTSQUARE  shift 101
	MINUS  shift 102
	NOT  shift 103
	POUND  shift 104
	PRE  shift 105
	WITH  shift 106
	IDENTIFIER  shift 107
	INTEGER  shift 108
	REAL  shift 109
	.  error


state 63
	varlist_id_list_comma52 : cur_position COMMA . IDENTIFIER varlist_id_list_comma52  (114)

	IDENTIFIER  shift 110
	.  error


state 64
	var_decl_list : var_decl vardecllist_var_decl_list_semicolon101 .  (88)

	.  reduce 88


state 65
	vardecllist_var_decl_list_semicolon101 : cur_position .  (89)
	vardecllist_var_decl_list_semicolon101 : cur_position . SEMICOLON var_decl vardecllist_var_decl_list_semicolon101  (90)

	SEMICOLON  shift 111
	RIGHTPAREN  reduce 89


state 66
	func_decl : cur_position FUNCTION IDENTIFIER LEFTPAREN var_decl_list RIGHTPAREN . RETURNS LEFTPAREN var_decl_list RIGHTPAREN  (49)

	RETURNS  shift 112
	.  error


state 67
	new_id_list : cur_position IDENTIFIER . varlist_id_list_comma53  (51)
	cur_position : .  (3)

	.  reduce 3

	cur_position  goto 113
	varlist_id_list_comma53  goto 114


state 68
	var_decl : new_id_list COLON . ltype  (87)
	cur_position : .  (3)

	.  reduce 3

	ltype  goto 115
	cur_position  goto 75


state 69
	in_param_list : in_param inparamlist_in_param_list_semicolon56 .  (54)

	.  reduce 54


state 70
	inparamlist_in_param_list_semicolon56 : cur_position .  (111)
	inparamlist_in_param_list_semicolon56 : cur_position . SEMICOLON in_param inparamlist_in_param_list_semicolon56  (112)

	SEMICOLON  shift 116
	RIGHTPAREN  reduce 111


state 71
	node_decl : cur_position NODE IDENTIFIER LEFTPAREN in_param_list RIGHTPAREN . RETURNS LEFTPAREN in_param_list RIGHTPAREN SEMICOLON nodedecl_node_decl_local_decl77 body  (69)

	RETURNS  shift 117
	.  error


state 72
	in_param : cur_position CONST . var_decl  (53)
	cur_position : .  (3)

	.  reduce 3

	var_decl  goto 118
	cur_position  goto 50
	new_id_list  goto 51


state 73
	clocked_var_decl : cur_position LEFTPAREN . var_decl_list RIGHTPAREN WHEN IDENTIFIER  (8)
	cur_position : .  (3)

	.  reduce 3

	var_decl  goto 48
	var_decl_list  goto 119
	cur_position  goto 50
	new_id_list  goto 51


state 74
	ltype : ltype . UPCARAT exp  (65)
	one_type_decl : cur_position IDENTIFIER EQUALS ltype .  (76)

	UPCARAT  shift 120
	SEMICOLON  reduce 76


state 75
	ltype : cur_position . IDENTIFIER  (64)
	ltype : cur_position . LEFTSQUARE type_list RIGHTSQUARE  (66)

	LEFTSQUARE  shift 121
	IDENTIFIER  shift 122
	.  error


state 76
	ltypelist_ltype_list_comma73 : cur_position COMMA . IDENTIFIER ltypelist_ltype_list_comma73  (104)

	IDENTIFIER  shift 123
	.  error


state 77
	exp : exp AND . exp  (28)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 124
	cur_position  goto 62


state 78
	exp : exp ARROW . exp  (24)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 125
	cur_position  goto 62


state 79
	exp : exp DIAMOND . exp  (31)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 126
	cur_position  goto 62


state 80
	exp : exp DIV . exp  (40)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 127
	cur_position  goto 62


state 81
	exp : exp EQUALS . exp  (30)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 128
	cur_position  goto 62


state 82
	exp : exp GREATERTHAN . exp  (33)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 129
	cur_position  goto 62


state 83
	exp : exp GTEQUALS . exp  (35)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 130
	cur_position  goto 62


state 84
	exp : exp IMPLIES . exp  (29)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 131
	cur_position  goto 62


state 85
	exp : exp LEFTSQUARE . exp sel_sub RIGHTSQUARE  (44)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 132
	cur_position  goto 62


state 86
	exp : exp LESSTHAN . exp  (32)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 133
	cur_position  goto 62


state 87
	exp : exp LTEQUALS . exp  (34)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 134
	cur_position  goto 62


state 88
	exp : exp MINUS . exp  (37)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 135
	cur_position  goto 62


state 89
	exp : exp MOD . exp  (41)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 136
	cur_position  goto 62


state 90
	exp : exp OR . exp  (26)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 137
	cur_position  goto 62


state 91
	exp : exp PIPE . exp  (43)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 138
	cur_position  goto 62


state 92
	exp : exp PLUS . exp  (36)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 139
	cur_position  goto 62


state 93
	exp : exp SLASH . exp  (39)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 140
	cur_position  goto 62


state 94
	exp : exp STAR . exp  (38)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 141
	cur_position  goto 62


state 95
	exp : exp UPCARAT . exp  (42)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 142
	cur_position  goto 62


state 96
	exp : exp WHEN . exp  (25)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 143
	cur_position  goto 62


state 97
	exp : exp XOR . exp  (27)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 144
	cur_position  goto 62


state 98
	exp : cur_position CURRENT . exp  (23)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 145
	cur_position  goto 62


state 99
	exp : cur_position IF . exp THEN exp ELSE exp  (45)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 146
	cur_position  goto 62


state 100
	exp : cur_position LEFTPAREN . exp_list RIGHTPAREN  (18)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 147
	exp_list  goto 148
	cur_position  goto 62


state 101
	exp : cur_position LEFTSQUARE . exp_list RIGHTSQUARE  (19)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 147
	exp_list  goto 149
	cur_position  goto 62


state 102
	exp : cur_position MINUS . exp  (21)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 150
	cur_position  goto 62


state 103
	exp : cur_position NOT . exp  (20)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 151
	cur_position  goto 62


state 104
	exp : cur_position POUND . LEFTPAREN exp_list RIGHTPAREN  (47)

	LEFTPAREN  shift 152
	.  error


state 105
	exp : cur_position PRE . exp  (22)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 153
	cur_position  goto 62


state 106
	exp : cur_position WITH . exp THEN exp ELSE exp  (46)
	cur_position : .  (3)

	.  reduce 3

	exp  goto 154
	cur_position  goto 62


state 107
	exp : cur_position IDENTIFIER .  (16)
	exp : cur_position IDENTIFIER . LEFTPAREN exp_list RIGHTPAREN  (17)
